[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://player/grass_sfx.gd" type="Script" id=2]
[ext_resource path="res://sound/air_rush.wav" type="AudioStream" id=3]
[ext_resource path="res://sound/kick.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.354473

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -0.2 )
current = true
far = 115.0

[node name="PlayerCapsule" type="CollisionShape" parent="."]
transform = Transform( 0.9, 0, 0, 0, -3.93403e-008, -1.05, 0, 0.9, -4.5897e-008, 0, 0.897159, 0 )
shape = SubResource( 1 )

[node name="Tail" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.778558, 0 )
enabled = true
cast_to = Vector3( 0, -1.2, 0 )

[node name="grass_sfx" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
script = ExtResource( 2 )

[node name="air_rush" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="jump_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
